# victron_system_monitor

./: CLAUDE.md  CONTROL_UNIT_PLAN.md  README.md  SOC_estimator.py  api_config.yml  aux_components.py  aux_logger.py  battery.py  components.py  config_default.py  control_runner.py  convert_logs.py  dbus_logger.py  kalman.py  mock_dbus_service.py  power_system.py  pyproject.toml  rest_api_app.py  simulation.py  soc_model.py  soc_test_model.py  test_init_soc_est.py  utils.py
control/: actuator.py  api_routes.py  config.py  decision_log.py  forecast.py  projection.py  schedule.py  state.py
control/agents/: base.py  forecast_aware.py  forecast_wallbox.py  soc_wallbox_charge.py  system_safety.py  time_based.py
data/: log_testing.csv
data/testing/: log_testing.csv
scripts/: install.sh  start.sh
tests/: conftest.py  dbus_test.py  test_agents.py  test_aggregation_logger.py  test_control_api.py  test_decision_log.py  test_file_logger.py  test_forecast.py  test_logger_writing.py  test_mock_dbus.py  test_projection.py  test_state.py
tests/data/agg/: log_26-03-15.csv  log_26-03-16.csv  log_26-03-17.csv
