[project]
name = "victron-system-monitor"
version = "0.1.0"
description = "Python software to be un on Venus OS to log available solar, inverter and battery data and run a simplified battery model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pydbus",
    "pytz>=2025.2",
]
[project.optional-dependencies]
cli = [
  "spyder",
  "pygobject>=3.54.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
