[project]
name = "victron-system-monitor"
version = "0.1.0"
description = "Python software to be un on Venus OS to log available solar, inverter and battery data and run a simplified battery model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pydbus",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "ecowhen-data-api",
    "spyder[spyder]>=6.1.3",
]

[tool.uv.sources]
ecowhen-data-api = { path = "../ecowhen_data_api" }
                    

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
