[project]
name = "victron-system-monitor"
version = "0.1.0"
description = "Python software to be un on Venus OS to log available solar, inverter and battery data and run a simplified battery model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pydbus",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "ecowhen-data-api",
    "dotenv>=0.9.9",
]
[project.optional-dependencies]
cli = [
  "spyder",
]

[tool.uv.sources]
ecowhen-data-api = { path = "../ecowhen_data_api" }
                    

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
